--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expotemplate",
+  "name": "reduxsample",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -11,13 +11,20 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@types/react": "~18.0.27",
     "expo": "~48.0.5",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.4",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.7",
     "react-native-logs": "^5.0.1",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.10",
     "requireindex": "^1.2.0",
     "typescript": "^4.9.4"
   },
