--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "~18.0.27",
     "expo": "~48.0.5",
     "expo-splash-screen": "~0.18.1",
@@ -25,6 +26,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "requireindex": "^1.2.0",
     "typescript": "^4.9.4"
   },
